# MiniProjectsGNN

./: .gitignore  .pre-commit-config.yaml  README.md
GAT/: README.md  gat.py  hyperparameters.yaml  main.py  pyproject.toml  train.sh  utils.py
GAT/model_metadata/: model_metadata_CiteSeer_20260116_192042.json  model_metadata_Cora_20260116_192028.json  model_metadata_PPI_20260116_192618.json  model_metadata_PubMed_20260116_192103.json
GAT/outputs/model_metadata/: model_metadata_CiteSeer_20260116_192042.json  model_metadata_Cora_20260116_192028.json  model_metadata_PPI_20260116_192618.json  model_metadata_PubMed_20260116_192103.json
GAT/outputs/train_eval_stats/: train_eval_stats_CiteSeer_20260116_192042.json  train_eval_stats_CiteSeer_20260211_163114.json  train_eval_stats_Cora_20260116_192028.json  train_eval_stats_Cora_20260211_163048.json  train_eval_stats_PPI_20260116_192618.json  train_eval_stats_PPI_20260211_163210.json  train_eval_stats_PubMed_20260116_192103.json  train_eval_stats_PubMed_20260211_163137.json
GAT/src/: evaluate.py  gat.py  load_data.py  main.py  train.sh  training.py  utils.py
GAT/train_eval_stats/: train_eval_stats_CiteSeer_20260116_192042.json  train_eval_stats_Cora_20260116_192028.json  train_eval_stats_PPI_20260116_192618.json  train_eval_stats_PubMed_20260116_192103.json
GCN/: README.md  evaluate.py  gcn.py  hyperparameters.yaml  load_data.py  main.py  requirements.txt  training.py  utils.py
graph_sage/: README.md  evaluate.py  graphsage.py  hyperparameters.yaml  load_data.py  main.py  requirements.txt  training.py
(+6 files in other folders)
