[project]
name = "gat-research"
version = "0.1.0"
description = "GAT research project for Object-Centric MBRL baselines"
requires-python = ">=3.12.2"
dependencies = [
    "torch==2.3.1+cu118",
    "torchvision==0.18.1+cu118",
    "torch-geometric==2.5.3",
    "wandb==0.18.5",
    "numpy==1.26.4",
    "tqdm==4.66.4",
    "matplotlib==3.9.1",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
]

[dependency-groups]
dev = [
    "ruff==0.7.1",
    "pre-commit==4.0.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "NPY", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
